--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -23,6 +23,10 @@
 
         .box {
           max-width: 50vw;
+
+          .description {
+            grid-template-rows: 10rem 1fr;
+          }
         }
       }
     }
@@ -127,6 +131,10 @@
 
         .box {
           max-width: 100vw;
+
+          .description {
+            grid-template-rows: 2fr 1fr;
+          }
         }
       }
     }
