--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -25,7 +25,8 @@
           max-width: 50vw;
 
           .description {
-            grid-template-rows: 10rem 1fr;
+            grid-template-rows: fit-content(4rem) 6.25rem 1fr;
+            align-items: center;
           }
         }
       }
@@ -69,6 +70,23 @@
   .page {
     .page-container {
       width: 100vw;
+    }
+  }
+
+  #inventory {
+    .inventory-inner {
+      .col-4 {
+        grid-template-columns: repeat(2, 1fr);
+
+        .box {
+          max-width: 50vw;
+
+          .description {
+            grid-template-rows: fit-content(4rem) 8.75rem 1fr;
+            align-items: center;
+          }
+        }
+      }
     }
   }
 }
@@ -133,7 +151,7 @@
           max-width: 100vw;
 
           .description {
-            grid-template-rows: 2fr 1fr;
+            grid-template-rows: fit-content(4rem) 1.5fr 1fr;
           }
         }
       }
